# etf_comparison

./: .env.example  .gitignore  CHANGELOG.md  README.md  architecture.md  pyproject.toml  requirements.txt  watchlist.yaml
.github/workflows/: ci.yml
.streamlit/: config.toml
scripts/: build_watchlist.py  candidates.yaml  etf_profiles.yaml
src/etf/: __init__.py  app.py  bonds.py  config.py  costs.py  data.py  db.py  factors.py  fx.py  metrics.py  optimizer.py  portfolio.py  profiles.py  projection.py  quality.py  risk.py  sentiment.py  settings.py  strategy.py  tax.py  theme.py
src/etf/ingest/: __init__.py  __main__.py  base.py  kenfrench.py  stooq.py  tiingo.py  yahoo.py
tests/: test_app.py  test_bonds.py  test_costs.py  test_data_integrity.py  test_factors.py  test_fx.py  test_metrics.py  test_optimizer.py  test_portfolio.py  test_profiles.py  test_projection.py  test_quality.py  test_risk.py  test_robustness.py  test_sentiment.py  test_strategy.py  test_tax.py  test_theme.py
tests/fixtures/: Europe_5_Factors_sample.csv  Europe_MOM_Factor_sample.csv
