[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-comparison"
version = "0.1.0"
description = "Local personal tool to gather, store, and compare UCITS ETFs."
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "pandas-datareader",
    "requests",
    "streamlit",
    "streamlit-option-menu",
    "plotly",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
etf-ingest = "etf.ingest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
